--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,11 +46,11 @@
 }
 
 [data-animation] {
-    background-image: url("https://static.whatsapp.net/rsrc.php/v3/yf/r/4l5Jzvrg84p.png");
+    background-image: url("https://cdn-img1.imgworlds.com/assets/e3873302-212a-4c3a-aab3-c3bee866903c.jpg?key=home-gallery");
 }
 
 .bgImg{
-    background-image: url(https://static.whatsapp.net/rsrc.php/v3/yl/r/gi_DckOUM5a.png);
+    background-image: url(https://img.freepik.com/free-photo/abstract-uv-ultraviolet-light-composition_23-2149243965.jpg);
 }
 
 .custom-scroll {
