--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,11 +46,11 @@
 }
 
 [data-animation] {
-    background-image: url();
+    background-image: url(https://static.whatsapp.net/rsrc.php/v3/yf/r/4l5Jzvrg84p.png);
 }
 
 .bgImg{
-    background-image: url();
+    background-image: url(https://static.whatsapp.net/rsrc.php/v3/yl/r/gi_DckOUM5a.png);
 }
 
 .custom-scroll {
